tools/app/src/globals.css
@media (max-width: 800px) {
  .breadcrumbs {
    display: none;
  }
}

[role='treeitem'][aria-selected='false']:hover {
  .treenode {
    background-color: #dedede;
  }
}

/* Removes selected item highlight which was bugged in Safari and to lesser extent in Chrome too  */
[role='treeitem'][aria-selected='true'] {
  outline: none;
}

.resizeHandle {
  width: 2px;
}

.resizeHandle:hover,
.resizeHandle:active {
  background-color: #0b6bcb;
}

.cyberismo-svg-wrapper svg {
  max-height: 100vh;
}

/* Add margin for inline macro buttons */
.doc .MuiButton-root {
  margin-top: 12px;
}

/* Tidy up tables */
/* TODO: This should not be done here, I think there are table border controls in AsciiDoc */
.doc table.tableblock {
  border-collapse: collapse;
}

/* Antora default styles from https://gitlab.com/antora/antora-ui-default, only .doc scoped styles included */

.doc {
  color: #333;
  font-size: inherit;
  -ms-hyphens: auto;
  hyphens: auto;
  line-height: 1.6;
  margin: 0;
  padding: 0;
}
@media screen and (min-width: 1024px) {
  .doc {
    -webkit-box-flex: 1;
    -ms-flex: auto;
    flex: auto;
    font-size: 0.94444rem;
    margin: 0;
    min-width: 0;
  }
}
.doc h1,
.doc h2,
.doc h3,
.doc h4,
.doc h5,
.doc h6 {
  color: #191919;
  font-weight: 400;
  -ms-hyphens: none;
  hyphens: none;
  line-height: 1.3;
  margin: 1rem 0 0;
}
.doc > h1.page:first-child {
  font-size: 2rem;
  margin: 1.5rem 0;
}
@media screen and (min-width: 769px) {
  .doc > h1.page:first-child {
    margin-top: 2.5rem;
  }
}
.doc > h1.page:first-child + aside.toc.embedded {
  margin-top: -0.5rem;
}
.doc > h2#name + .sectionbody {
  margin-top: 1rem;
}
#preamble + .sect1,
.doc .sect1 + .sect1 {
  margin-top: 2rem;
}
.doc h1.sect0 {
  background: #f0f0f0;
  font-size: 1.8em;
  margin: 1.5rem -1rem 0;
  padding: 0.5rem 1rem;
}
.doc h2:not(.discrete) {
  border-bottom: 1px solid #e1e1e1;
  margin-left: -1rem;
  margin-right: -1rem;
  padding: 0.4rem 1rem 0.1rem;
}
.doc h3:not(.discrete),
.doc h4:not(.discrete) {
  font-weight: 600;
}
.doc h1 .anchor,
.doc h2 .anchor,
.doc h3 .anchor,
.doc h4 .anchor,
.doc h5 .anchor,
.doc h6 .anchor {
  position: absolute;
  text-decoration: none;
  width: 1.75ex;
  margin-left: -1.5ex;
  visibility: hidden;
  font-size: 0.8em;
  font-weight: 400;
  padding-top: 0.05em;
}
.doc h1 .anchor::before,
.doc h2 .anchor::before,
.doc h3 .anchor::before,
.doc h4 .anchor::before,
.doc h5 .anchor::before,
.doc h6 .anchor::before {
  content: '\00a7';
}
.doc h1:hover .anchor,
.doc h2:hover .anchor,
.doc h3:hover .anchor,
.doc h4:hover .anchor,
.doc h5:hover .anchor,
.doc h6:hover .anchor {
  visibility: visible;
}
.doc dl,
.doc p {
  margin: 0;
}
.doc a {
  color: #1565c0;
}
.doc a:hover {
  color: #104d92;
}
.doc a.bare {
  -ms-hyphens: none;
  hyphens: none;
}
.doc a.unresolved {
  color: #d32f2f;
}
.doc i.fa {
  -ms-hyphens: none;
  hyphens: none;
  font-style: normal;
}
.doc .colist > table code,
.doc p code,
.doc thead code {
  color: #222;
  background: #fafafa;
  border-radius: 0.25em;
  font-size: 0.95em;
  padding: 0.125em 0.25em;
}
.doc code,
.doc pre {
  -ms-hyphens: none;
  hyphens: none;
}
.doc pre {
  font-size: 0.88889rem;
  line-height: 1.5;
  margin: 0;
}
.doc blockquote {
  margin: 0;
}
.doc .paragraph.lead > p {
  font-size: 1rem;
}
.doc .right {
  float: right;
}
.doc .left {
  float: left;
}
.doc .float-gap.right {
  margin: 0 1rem 1rem 0;
}
.doc .float-gap.left {
  margin: 0 0 1rem 1rem;
}
.doc .float-group::after {
  content: '';
  display: table;
  clear: both;
}
.doc .text-left {
  text-align: left;
}
.doc .text-center {
  text-align: center;
}
.doc .text-right {
  text-align: right;
}
.doc .text-justify {
  text-align: justify;
}
.doc .stretch {
  width: 100%;
}
.doc .big {
  font-size: larger;
}
.doc .small {
  font-size: smaller;
}
.doc .underline {
  text-decoration: underline;
}
.doc .line-through {
  text-decoration: line-through;
}
.doc .dlist,
.doc .exampleblock,
.doc .hdlist,
.doc .imageblock,
.doc .listingblock,
.doc .literalblock,
.doc .olist,
.doc .paragraph,
.doc .partintro,
.doc .quoteblock,
.doc .sidebarblock,
.doc .tabs,
.doc .ulist,
.doc .verseblock,
.doc .videoblock,
.doc details,
.doc hr {
  margin: 1rem 0 0;
}
.doc .tablecontainer,
.doc .tablecontainer + *,
.doc :not(.tablecontainer) > table.tableblock,
.doc :not(.tablecontainer) > table.tableblock + *,
.doc > table.tableblock,
.doc > table.tableblock + * {
  margin-top: 1.5rem;
}
.doc table.tableblock {
  font-size: 0.83333rem;
}
.doc p.tableblock + p.tableblock {
  margin-top: 0.5rem;
}
.doc table.tableblock pre {
  font-size: inherit;
}
.doc td.tableblock > .content {
  word-wrap: anywhere;
}
.doc td.tableblock > .content > :first-child {
  margin-top: 0;
}
.doc table.tableblock td {
  padding: 0.5rem;
}
.doc table.tableblock th {
  padding: 0.5rem;
  background: #fbfcfe;
}
.doc table.tableblock,
.doc table.tableblock > * > tr > * {
  border: 0 solid #e1e1e1;
}
.doc table.grid-all > * > tr > * {
  border-width: 1px;
}
.doc table.grid-cols > * > tr > * {
  border-width: 0 1px;
}
.doc table.grid-rows > * > tr > * {
  border-width: 1px 0;
}
.doc table.grid-all > thead th,
.doc table.grid-rows > thead th {
  border-bottom-width: 2.5px;
}
.doc table.frame-all {
  border-width: 1px;
}
.doc table.frame-ends {
  border-width: 1px 0;
}
.doc table.frame-sides {
  border-width: 0 1px;
}
.doc table.frame-none > colgroup + * > :first-child > *,
.doc table.frame-sides > colgroup + * > :first-child > * {
  border-top-width: 0;
}
.doc table.frame-sides > :last-child > :last-child > * {
  border-bottom-width: 0;
}
.doc table.frame-ends > * > tr > :first-child,
.doc table.frame-none > * > tr > :first-child {
  border-left-width: 0;
}
.doc table.frame-ends > * > tr > :last-child,
.doc table.frame-none > * > tr > :last-child {
  border-right-width: 0;
}
/* ... */

